source/sass/blocks/offers-list.scss
.offers-list {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-block-start: 34px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: repeat(2, minmax(211px, 1fr));
  grid-auto-rows: minmax(211px, 1fr);
  gap: 40px;
  overflow: hidden;

  @include vp-tablet {
    margin-block-start: 40px;
    grid-template-rows: minmax(462px, auto);
    grid-auto-rows: minmax(211px, 1fr);
    gap: 30px;
  }

  @include vp-mobile {
    margin-block-start: 42px;
    grid-template-columns: 1fr;
    grid-template-rows: auto minmax(211px, min-content) minmax(211px, min-content);
    gap: 30px;
    text-align: center;
    align-items: center;
  }
}

.offers-list__item-main {
  border: none;
  padding: 0;
  height: 100%;
  background-color: $bg-banner;
  grid-row: 1 / span 2;
  display: grid;
  grid-template-columns: 1fr 1fr;

  @include vp-tablet {
    grid-column: 1 / span 2;
    grid-row: auto;
    grid-template-columns: 279px 1fr;
    grid-template-rows: minmax(462px, auto);
  }

  @include vp-mobile {
    grid-column: unset;
    grid-row: unset;
    grid-template-columns: auto;
    grid-template-rows: 299px 299px;
  }


  &-text-content {
    height: 100%;
    color: $color-white;
    padding: 34px 45px 45px;
    display: flex;
    flex-direction: column;

    @include vp-mobile {
      padding: 34px 45px 36px;
      align-items: center;
    }

    h3 {
      margin: 0;
      font-size: 28px;
      font-weight: 700;
      line-height: 156%;
    }

    span {
      display: block;
      font-size: 70px;
      font-weight: 700;
      line-height: 156%;
      margin-block-start: -26px;
    }

    p {
      margin: 0;
      font-size: 18px;
      font-weight: 400;
      line-height: 140%;

      @include vp-mobile {
        margin-block-start: -5px;
      }
    }

    a {
      margin: 0;
      margin-top: auto;
      transform: translate(-10px, 9px);

      @include vp-mobile {
        transform: none;
      }
    }
  }

  img {
    background-color: #5089e5;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: top;

    @include vp-mobile {
      width: 100%;
      height: 299px;
      object-fit: cover;
      object-position: top;
    }
  }
}

.offers-list__item {
  height: 100%;
  color: #1c3374;
  padding: 30px 35px 36px;
  border-image: $gradient-border;
  border-image-slice: 1;
  border-image-width: 7px;
  display: flex;
  flex-direction: column;

  @include vp-mobile {
    padding: 40px 35px 37px;
    align-items: center;
  }

  h3 {
    margin: 0;
    font-size: 26px;
    font-weight: 700;
    line-height: 30px;
  }

  p {
    margin: 0;
    margin-block-start: 7px;
    font-size: 16px;
    line-height: 140%;
    /* 22.4px */
  }

  a {
    margin: 0;
    margin-top: auto;
    transform: translate(-10px, 9px);

    @include vp-mobile {
      transform: none;
    }
  }
}

